Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2014-08-09 18:25:21+01:00 Europe/London
	No new features

	Dependency fixes:
	* Added IO::Socket::IP to cpanfile

0.001     2014-08-04 15:44:06+01:00 Europe/London
	Initial CPAN release