@@ -3,7 +3,7 @@ package Net::Async::Statsd;
 use strict;
 use warnings;
 
-our $VERSION = '0.002';
+our $VERSION = '0.003';
 
 =head1 NAME
 
