@@ -1,6 +1,12 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	No new features
+
+	Bugs fixed:
+	* Retain the queue_stat Future to avoid ->then in void context,
+	as a precaution for when UDP ->send gains the ability to resolve the
+	future on completion
 
 0.002     2014-08-09 18:25:21+01:00 Europe/London
 	No new features
